# policybot-ai-agent

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  QUICKSTART.md  README.md  debug_faiss.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/agents/: agent.py  memory.py  tools.py
app/api/: routes.py
app/llm/: llm_client.py  prompts.py
app/models/: schemas.py
app/rag/: document_processor.py  retriever.py  vector_store.py
data/documents/: benefits_guide.txt  code_of_conduct.txt  company_handbook.txt  it_policy.txt  leave_policy.txt  performance_management.txt  remote_work_policy.txt  training_development.txt  travel_expense_policy.txt
deployment/: Dockerfile  README_PRODUCTION.md  docker-compose.yml  entrypoint.sh
deployment/azure/: deploy.sh
deployment/terraform/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: api.md  architecture.md  deployment.md  testing.md
example/: github-actions-tests.yml
example/.github/workflows/: azure-deploy.yml
scripts/: debug_classification.py  debug_rag.py  setup_vectorstore.py  setup_vectorstore_prod.sh  test_100_questions.py  test_50_questions.py  test_advanced.py  test_agent.py  test_comprehensive.py
tests/: conftest.py  factories.py  test_agent.py  test_api.py  test_rag.py
tests/integration/: test_end_to_end.py
tests/performance/: locustfile.py
tests/unit/: test_agent.py  test_config.py  test_document_processor.py  test_document_processor_extended.py  test_llm_client.py  test_llm_client_azure.py  test_llm_client_streaming.py  test_memory.py  test_tools.py  test_vector_store_azure.py  test_vector_store_faiss.py
